--- a/css/backgking.css
+++ b/css/backgking.css
@@ -27,7 +27,10 @@ body {
   overflow-x:hidden;
 }
 
-/* contain 
+
+/*
+
+* contain 
 div.contain {
   width: 100%;
   height: 250px;
@@ -39,9 +42,28 @@ img.contain {
   width: 100%;
   height: auto;
 }
+
+
+
+
+
+.hero-image {
+  background-image: url("backg.png");
+  background-color: #cccccc;
+  height: 500px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+
+
+
 */
 
 /* cover */
+
 
 
 div.cover {
@@ -59,12 +81,10 @@ img.cover {
   right: 0; 
   bottom: 0; 
   margin: auto; 
-  min-width: 50%;
-  min-height: 50%;
-  overflow-x: hidden;
+  min-width: 100%;
+  min-height: 100%;
+  overflow-x: contain;
 }
-
-
 
 
 
@@ -77,7 +97,7 @@ img.cover {
 body, html {
   height: 100%;
   min-height: 100%;
-  overflow-x: hidden;
+  overflow-x: contain;
 }
 
 
